chore: apply robust .gitignore for Angular frontend